@@ -29,6 +29,9 @@
                 <configuration>
                     <source>20</source>
                     <target>20</target>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
